--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -11,11 +11,15 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>testUserAdd</td>
+<td>testEditUser</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
 <td>testDeleteUser</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>testUserAdd</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
