--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="729f7f">  <td>24/03/13 23:26:57</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SupportBrowser.setUp()[pri:0, instance:orangehrmtests.UserFunctionalityTest@60856961]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@966966167</td>   <td></td> </tr>
-<tr bgcolor="6d7c83">  <td>24/03/13 23:26:59</td>   <td>2127</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserFunctionalityTest.testUserSearch()[pri:0, instance:orangehrmtests.UserFunctionalityTest@60856961]">testUserSearch</td> 
-  <td>main@966966167</td>   <td></td> </tr>
-<tr bgcolor="729f7f">  <td>24/03/13 23:27:22</td>   <td>25219</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SupportBrowser.tearDown()[pri:0, instance:orangehrmtests.UserFunctionalityTest@60856961]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@966966167</td>   <td></td> </tr>
+<tr bgcolor="729f7f">  <td>24/03/14 17:55:27</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SupportBrowser.setUp()[pri:0, instance:orangehrmtests.UserFunctionalityTest@2fd953a6]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@61681175</td>   <td></td> </tr>
+<tr bgcolor="6d7c83">  <td>24/03/14 17:55:29</td>   <td>1904</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserFunctionalityTest.testDeleteUser()[pri:0, instance:orangehrmtests.UserFunctionalityTest@2fd953a6]">testDeleteUser</td> 
+  <td>main@61681175</td>   <td></td> </tr>
+<tr bgcolor="729f7f">  <td>24/03/14 17:56:06</td>   <td>38672</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SupportBrowser.tearDown()[pri:0, instance:orangehrmtests.UserFunctionalityTest@2fd953a6]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@61681175</td>   <td></td> </tr>
 </table>
