--- a/test-output/old/Default suite/methods-not-run.html
+++ b/test-output/old/Default suite/methods-not-run.html
@@ -1,6 +1,6 @@
 <h2>Methods that were not run</h2><table>
-<tr><td>orangehrmtests.UserFunctionalityTest.testEditUser</td></tr>
 <tr><td>orangehrmtests.UserFunctionalityTest.testUserSearch</td></tr>
 <tr><td>orangehrmtests.UserFunctionalityTest.testUserAdd</td></tr>
+<tr><td>orangehrmtests.UserFunctionalityTest.testDeleteUser</td></tr>
 <tr><td>orangehrmtests.UserFunctionalityTest.testLogin</td></tr>
 </table>
