--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="729f7f">  <td>24/03/14 17:55:27</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SupportBrowser.setUp()[pri:0, instance:orangehrmtests.UserFunctionalityTest@2fd953a6]">&gt;&gt;setUp</td> 
+<tr bgcolor="729f7f">  <td>24/03/15 15:10:22</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SupportBrowser.setUp()[pri:0, instance:orangehrmtests.UserFunctionalityTest@2fd953a6]">&gt;&gt;setUp</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@61681175</td>   <td></td> </tr>
-<tr bgcolor="6d7c83">  <td>24/03/14 17:55:29</td>   <td>1904</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserFunctionalityTest.testDeleteUser()[pri:0, instance:orangehrmtests.UserFunctionalityTest@2fd953a6]">testDeleteUser</td> 
+<tr bgcolor="6d7c83">  <td>24/03/15 15:10:24</td>   <td>1777</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserFunctionalityTest.testEditUser()[pri:0, instance:orangehrmtests.UserFunctionalityTest@2fd953a6]">testEditUser</td> 
   <td>main@61681175</td>   <td></td> </tr>
-<tr bgcolor="729f7f">  <td>24/03/14 17:56:06</td>   <td>38672</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SupportBrowser.tearDown()[pri:0, instance:orangehrmtests.UserFunctionalityTest@2fd953a6]">&lt;&lt;tearDown</td> 
+<tr bgcolor="729f7f">  <td>24/03/15 15:10:50</td>   <td>27903</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SupportBrowser.tearDown()[pri:0, instance:orangehrmtests.UserFunctionalityTest@2fd953a6]">&lt;&lt;tearDown</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@61681175</td>   <td></td> </tr>
 </table>
