--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -4,26 +4,34 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>orangehrmtests.UserFunctionalityTest</td>
+<td>orangehrmtests.LoginTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>testEditUser</td>
+<td>linkTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>testUserAdd</td>
+<td>testValidLogin</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>testDeleteUser</td>
+<td>testEmptyUsernameAndPassword</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>testUserSearch</td>
+<td>restrictedAccess</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>testInvalidLogin</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>recuritmentTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
