More functionalities added

--- a/test-output/old/Default suite/methods-not-run.html
+++ b/test-output/old/Default suite/methods-not-run.html
@@ -1,8 +1,6 @@
 <h2>Methods that were not run</h2><table>
-<tr><td>orangehrmtests.LoginTest.testLogin</td></tr>
-<tr><td>orangehrmtests.LoginTest.testValidLogin</td></tr>
-<tr><td>orangehrmtests.LoginTest.linkTest</td></tr>
-<tr><td>orangehrmtests.LoginTest.testEmptyUsernameAndPassword</td></tr>
-<tr><td>orangehrmtests.LoginTest.restrictedAccess</td></tr>
-<tr><td>orangehrmtests.LoginTest.testInvalidLogin</td></tr>
+<tr><td>orangehrmtests.UserFunctionalityTest.testUserSearch</td></tr>
+<tr><td>orangehrmtests.UserFunctionalityTest.testUserAdd</td></tr>
+<tr><td>orangehrmtests.UserFunctionalityTest.testDeleteUser</td></tr>
+<tr><td>orangehrmtests.UserFunctionalityTest.testLogin</td></tr>
 </table>
