--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -4,34 +4,26 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>orangehrmtests.LoginTest</td>
+<td>orangehrmtests.UserFunctionalityTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>linkTest</td>
+<td>testEditUser</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>testValidLogin</td>
+<td>testUserAdd</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>testEmptyUsernameAndPassword</td>
+<td>testDeleteUser</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>restrictedAccess</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>testInvalidLogin</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>recuritmentTest</td>
+<td>testUserSearch</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
