--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6d7c83">  <td>24/03/18 14:19:44</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.recuritmentTest()[pri:0, instance:orangehrmtests.LoginTest@141e5bef]">recuritmentTest</td> 
-  <td>main@1127338375</td>   <td></td> </tr>
-<tr bgcolor="729f7f">  <td>24/03/18 14:19:41</td>   <td>-2165</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SupportBrowser.setUp()[pri:0, instance:orangehrmtests.LoginTest@141e5bef]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1127338375</td>   <td></td> </tr>
-<tr bgcolor="729f7f">  <td>24/03/18 14:19:52</td>   <td>7894</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SupportBrowser.tearDown()[pri:0, instance:orangehrmtests.LoginTest@141e5bef]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1127338375</td>   <td></td> </tr>
+<tr bgcolor="729f7f">  <td>24/03/20 15:56:22</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SupportBrowser.setUp()[pri:0, instance:orangehrmtests.UserFunctionalityTest@a4add54]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@147022238</td>   <td></td> </tr>
+<tr bgcolor="729f7f">  <td>24/03/20 15:56:48</td>   <td>26015</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SupportBrowser.tearDown()[pri:0, instance:orangehrmtests.UserFunctionalityTest@a4add54]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@147022238</td>   <td></td> </tr>
+<tr bgcolor="6d7c83">  <td>24/03/20 15:56:24</td>   <td>1586</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserFunctionalityTest.testEditUser()[pri:0, instance:orangehrmtests.UserFunctionalityTest@a4add54]">testEditUser</td> 
+  <td>main@147022238</td>   <td></td> </tr>
 </table>
