--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\Manasa\AppData\Local\Temp\testng-eclipse--2090396696\testng-customsuite.xml</span>
+                    <span>C:\Users\Manasa\AppData\Local\Temp\testng-eclipse-172434039\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -102,7 +102,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="orangehrmtests.UserFunctionalityTest" class="method navigator-link" hash-for-method="testEditUser">testEditUser</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="orangehrmtests.WebElementTest" class="method navigator-link" hash-for-method="radioBtnTest">radioBtnTest</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -120,14 +120,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">orangehrmtests.UserFunctionalityTest</span>
+              <span class="class-name">orangehrmtests.WebElementTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="testEditUser">
-                  </a> <!-- testEditUser -->
-                  <span class="method-name">testEditUser</span>
+                  <a name="radioBtnTest">
+                  </a> <!-- radioBtnTest -->
+                  <span class="method-name">radioBtnTest</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -135,7 +135,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Manasa\AppData\Local\Temp\testng-eclipse--2090396696\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Manasa\AppData\Local\Temp\testng-eclipse-172434039\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -144,11 +144,11 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;orangehrmtests.UserFunctionalityTest&quot;&gt;
+      &lt;class name=&quot;orangehrmtests.WebElementTest&quot;&gt;
         &lt;methods&gt;
-          &lt;include name=&quot;testEditUser&quot;/&gt;
+          &lt;include name=&quot;radioBtnTest&quot;/&gt;
         &lt;/methods&gt;
-      &lt;/class&gt; &lt;!-- orangehrmtests.UserFunctionalityTest --&gt;
+      &lt;/class&gt; &lt;!-- orangehrmtests.WebElementTest --&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -190,14 +190,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'testEditUser')
-data.setCell(0, 2, 'orangehrmtests.UserFunctionalityTest')
-data.setCell(0, 3, 15465);
+data.setCell(0, 1, 'radioBtnTest')
+data.setCell(0, 2, 'orangehrmtests.WebElementTest')
+data.setCell(0, 3, 8082);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 15 seconds</span>
+              <span class="suite-total-time">Total running time: 8 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -212,19 +212,15 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">4 ignored methods</span>
+            <span class="header-content">2 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="ignored-class-div">
-              <span class="ignored-class-name">orangehrmtests.UserFunctionalityTest</span>
+              <span class="ignored-class-name">orangehrmtests.WebElementTest</span>
               <div class="ignored-methods-div">
-                <span class="ignored-method-name">testUserSearch</span>
+                <span class="ignored-method-name">txtBoxTest</span>
                 <br/>
-                <span class="ignored-method-name">testUserAdd</span>
-                <br/>
-                <span class="ignored-method-name">testDeleteUser</span>
-                <br/>
-                <span class="ignored-method-name">testLogin</span>
+                <span class="ignored-method-name">buttonTest</span>
                 <br/>
               </div> <!-- ignored-methods-div -->
             </div> <!-- ignored-class-div -->
@@ -236,18 +232,18 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">orangehrmtests.UserFunctionalityTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">orangehrmtests.WebElementTest</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">setUp</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">testEditUser</span>
-                <span class="method-start">1537 ms</span>
+                <span class="method-name">radioBtnTest</span>
+                <span class="method-start">1687 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">17002 ms</span>
+                <span class="method-start">9771 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
