changes in TextBox

--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\Manasa\AppData\Local\Temp\testng-eclipse--1415323481\testng-customsuite.xml</span>
+                    <span>C:\Users\Manasa\AppData\Local\Temp\testng-eclipse-1769391803\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -102,7 +102,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="orangehrmtests.WebElementTest" class="method navigator-link" hash-for-method="radioBtnTest">radioBtnTest</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="orangehrmtests.WebElementTest" class="method navigator-link" hash-for-method="txtBoxTest">txtBoxTest</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -125,9 +125,9 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="radioBtnTest">
-                  </a> <!-- radioBtnTest -->
-                  <span class="method-name">radioBtnTest</span>
+                  <a name="txtBoxTest">
+                  </a> <!-- txtBoxTest -->
+                  <span class="method-name">txtBoxTest</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -135,7 +135,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Manasa\AppData\Local\Temp\testng-eclipse--1415323481\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Manasa\AppData\Local\Temp\testng-eclipse-1769391803\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -146,7 +146,7 @@
     &lt;classes&gt;
       &lt;class name=&quot;orangehrmtests.WebElementTest&quot;&gt;
         &lt;methods&gt;
-          &lt;include name=&quot;radioBtnTest&quot;/&gt;
+          &lt;include name=&quot;txtBoxTest&quot;/&gt;
         &lt;/methods&gt;
       &lt;/class&gt; &lt;!-- orangehrmtests.WebElementTest --&gt;
     &lt;/classes&gt;
@@ -190,14 +190,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'radioBtnTest')
+data.setCell(0, 1, 'txtBoxTest')
 data.setCell(0, 2, 'orangehrmtests.WebElementTest')
-data.setCell(0, 3, 4532);
+data.setCell(0, 3, 9771);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 4 seconds</span>
+              <span class="suite-total-time">Total running time: 9 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -218,7 +218,7 @@ return data;
             <div class="ignored-class-div">
               <span class="ignored-class-name">orangehrmtests.WebElementTest</span>
               <div class="ignored-methods-div">
-                <span class="ignored-method-name">txtBoxTest</span>
+                <span class="ignored-method-name">radioBtnTest</span>
                 <br/>
                 <span class="ignored-method-name">buttonTest</span>
                 <br/>
@@ -238,12 +238,12 @@ return data;
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">radioBtnTest</span>
-                <span class="method-start">4269 ms</span>
+                <span class="method-name">txtBoxTest</span>
+                <span class="method-start">8335 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">8802 ms</span>
+                <span class="method-start">18106 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
