--- a/test-output/old/Default suite/methods-not-run.html
+++ b/test-output/old/Default suite/methods-not-run.html
@@ -1,4 +1,4 @@
 <h2>Methods that were not run</h2><table>
-<tr><td>orangehrmtests.WebElementTest.txtBoxTest</td></tr>
+<tr><td>orangehrmtests.WebElementTest.radioBtnTest</td></tr>
 <tr><td>orangehrmtests.WebElementTest.buttonTest</td></tr>
 </table>
